--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
       </a>
       <ul class="nav-list">
         <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="../pix.html">Görsel arama uygulaması</a>
+          <a class="nav-link {=$highlight-act}" href="./pix.html">Görsel arama uygulaması</a>
         </li>
         <li class="nav-item">
           <a class="nav-link {=$highlight-curr}" href="./page-3.html">Page 3</a>
